--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
+<meta name="viewport" content="initial-scale=1.0, width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0, minimal-ui">
+<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 <canvas id='canv'></canvas>
+<script src='./binding.js'></script>
+<script src='./util.js'></script>
 <script src='./main.js'></script>
 <style>
 body {
