clean drawing on high dpi displays

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <meta name="viewport" content="initial-scale=1.0, width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0, minimal-ui">
 <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-<canvas id='canv'></canvas>
+<canvas id='canv' style='width:100%;height: 100%;'></canvas>
 <script src='./util.js'></script>
 <script src='./vars.js'></script>
 <script src='./binding.js'></script>
