--- a/index.html
+++ b/index.html
@@ -435,6 +435,9 @@ if (localStorage.highScore) {
   $highScore.style.fontSize = window.innerWidth / 30
 }
 
+//DEBUG
+start()
+
 function start() {
   $homeScreen.style.display = 'none'
   newGame()
