--- a/index.html
+++ b/index.html
@@ -377,6 +377,25 @@
   <button class='play-again'>
     PLAY AGAIN
   </button>
+  <br>
+  <a href="https://twitter.com/share?url=http%3A%2F%2Ffuco.zolmeister.com&text=Play FUCO online, free, on any device!&hashtags=fuco"
+   target="_blank"
+   class="tweet-score">
+   <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+  <svg
+    viewbox="0 0 2000 1625.36"
+    width="20"
+    height="16"
+    class="bird"
+    version="1.1"
+    style="vertical-align:middle"
+    xmlns="http://www.w3.org/2000/svg">
+    <path
+      d="m 1999.9999,192.4 c -73.58,32.64 -152.67,54.69 -235.66,64.61 84.7,-50.78 149.77,-131.19 180.41,-227.01 -79.29,47.03 -167.1,81.17 -260.57,99.57 C 1609.3399,49.82 1502.6999,0 1384.6799,0 c -226.6,0 -410.328,183.71 -410.328,410.31 0,32.16 3.628,63.48 10.625,93.51 -341.016,-17.11 -643.368,-180.47 -845.739,-428.72 -35.324,60.6 -55.5583,131.09 -55.5583,206.29 0,142.36 72.4373,267.95 182.5433,341.53 -67.262,-2.13 -130.535,-20.59 -185.8519,-51.32 -0.039,1.71 -0.039,3.42 -0.039,5.16 0,198.803 141.441,364.635 329.145,402.342 -34.426,9.375 -70.676,14.395 -108.098,14.395 -26.441,0 -52.145,-2.578 -77.203,-7.364 52.215,163.008 203.75,281.649 383.304,284.946 -140.429,110.062 -317.351,175.66 -509.5972,175.66 -33.1211,0 -65.7851,-1.949 -97.8828,-5.738 181.586,116.4176 397.27,184.359 628.988,184.359 754.732,0 1167.462,-625.238 1167.462,-1167.47 0,-17.79 -0.41,-35.48 -1.2,-53.08 80.1799,-57.86 149.7399,-130.12 204.7499,-212.41"
+      style="fill:#424242;"/>
+  </svg>
+  I'm the best!
+  </a>
 </div>
 <script src='./util.js'></script>
 <script src='./vars.js'></script>
@@ -419,6 +438,7 @@ body {
   display: inline-block;
 }
 .play, .play-again {
+  cursor: pointer;
   font-family: 'Open Sans', sans-serif;
   font-weight: 300;
   display: inline-block;
@@ -442,7 +462,7 @@ button::-moz-focus-inner{
 .high-score {
 
 }
-.tweet-button {
+.tweet-button, .tweet-score {
   display: inline-block;
   padding: 20px;
   border-radius: 5px;
@@ -452,14 +472,28 @@ button::-moz-focus-inner{
   -o-transition: background-color 0.25s ease-in-out;
   transition: background-color 0.25s ease-in-out;
 }
-.tweet-button:hover {
+.tweet-button:hover, .tweet-score:hover {
   background: rgba(0,172,237,0.2)
+}
+.tweet-score {
+  color: #222;
+  text-decoration: none;
 }
 </style>
 <script>
-var $bird = document.getElementsByClassName('bird')[0]
-$bird.style.width = window.innerWidth / 20
-$bird.style.height = window.innerWidth / 20
+var $bird = document.getElementsByClassName('bird')
+var i = $bird.length
+while(i--) {
+  $bird[i].style.width = window.innerWidth / 20
+  $bird[i].style.height = window.innerWidth / 20
+}
+
+var $tweetButton = document.getElementsByClassName('tweet-button')[0]
+$tweetButton.style.marginTop = window.innerHeight / 30
+
+var $tweetScore = document.getElementsByClassName('tweet-score')[0]
+$tweetScore.style.marginTop = window.innerHeight / 30
+$tweetScore.style.fontSize = window.innerHeight / 60
 
 var $tweetButton = document.getElementsByClassName('tweet-button')[0]
 $tweetButton.style.marginTop = window.innerHeight / 30
@@ -487,10 +521,10 @@ $play.style.fontSize = window.innerWidth / 20
 
 var $playAgain = document.getElementsByClassName('play-again')[0]
 
-$play.addEventListener('mousedown', start)
+$play.addEventListener('click', start)
 $play.addEventListener('touchstart', start)
 
-$playAgain.addEventListener('mousedown', start)
+$playAgain.addEventListener('click', start)
 $playAgain.addEventListener('touchstart', start)
 
 var $highScore = document.getElementsByClassName('high-score')[0]
@@ -498,6 +532,13 @@ if (localStorage.highScore) {
   $highScore.innerHTML = 'best: ' + localStorage.highScore
   $highScore.style.fontSize = window.innerWidth / 30
 }
+
+var $paths = document.getElementsByTagName('path')
+var i = $paths.length
+while(i--) {
+  simulatePathDrawing($paths[i])
+}
+
 
 //DEBUG
 //start()
@@ -522,13 +563,15 @@ function showEnd(score, newHigh) {
 
   $best.style.fontSize = window.innerWidth / 30
 
+  $tweetScore.href = 'https://twitter.com/share?url=http%3A%2F%2Ffuco.zolmeister.com&text=I got ' + score + ' points in FUCO, YEAH!!!&hashtags=fuco'
+
   if (!newHigh) {
     $best.innerHTML = 'Best: ' + localStorage.highScore || 0
   }
 
   $endScreen.style.display = 'block'
 
-  $endText.innerHTML = score < 100 ? 'Are you event trying?' : randomEndText()
+  $endText.innerHTML = score < 100 ? 'Are you even trying?' : randomEndText()
   $endText.style.fontSize = window.innerWidth / 20
   $endText.style.marginTop = window.innerHeight / 2
 
@@ -585,12 +628,6 @@ function simulatePathDrawing(path) {
   path.style.strokeDashoffset = '0'
   path.style.strokeWidth = '2px'
 }
-var $paths = document.getElementsByTagName('path')
-var i = $paths.length
-while(i--) {
-  simulatePathDrawing($paths[i])
-}
-
 
 
 </script>
