--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
       d="m 1999.9999,192.4 c -73.58,32.64 -152.67,54.69 -235.66,64.61 84.7,-50.78 149.77,-131.19 180.41,-227.01 -79.29,47.03 -167.1,81.17 -260.57,99.57 C 1609.3399,49.82 1502.6999,0 1384.6799,0 c -226.6,0 -410.328,183.71 -410.328,410.31 0,32.16 3.628,63.48 10.625,93.51 -341.016,-17.11 -643.368,-180.47 -845.739,-428.72 -35.324,60.6 -55.5583,131.09 -55.5583,206.29 0,142.36 72.4373,267.95 182.5433,341.53 -67.262,-2.13 -130.535,-20.59 -185.8519,-51.32 -0.039,1.71 -0.039,3.42 -0.039,5.16 0,198.803 141.441,364.635 329.145,402.342 -34.426,9.375 -70.676,14.395 -108.098,14.395 -26.441,0 -52.145,-2.578 -77.203,-7.364 52.215,163.008 203.75,281.649 383.304,284.946 -140.429,110.062 -317.351,175.66 -509.5972,175.66 -33.1211,0 -65.7851,-1.949 -97.8828,-5.738 181.586,116.4176 397.27,184.359 628.988,184.359 754.732,0 1167.462,-625.238 1167.462,-1167.47 0,-17.79 -0.41,-35.48 -1.2,-53.08 80.1799,-57.86 149.7399,-130.12 204.7499,-212.41"
       style="fill:#424242;"/>
   </svg>
-  I'm the best!
+  <strong class="crystal-text2">+3 <img class="crystal" src="crystal.svg"></strong>
   </a>
 </div>
 <div class='tweet-bubble'>
@@ -443,7 +443,7 @@ body {
   color: #212121;
   text-decoration: none;
 }
-.crystal-text {
+.crystal-text, .crystal-text2 {
   display: none;
 }
 .crystal {
@@ -453,14 +453,8 @@ body {
 .tweet-bubble {
   position: absolute;
   left: 50%;
-  margin-left: -150px;
-  margin-top: 20px;
-  border-radius: 10px;
-  width: 300px;
-  font-size: 20px;
-  height: 50px;
   background: #4fc3f7;
-  padding: 20px;
+  border-radius: 5px;
   text-align: center;
   display: none;
   opacity: 0;
@@ -571,10 +565,12 @@ localStorage.hasVisited = true
 
 var lastTweet = localStorage.lastTweet || '0'
 
+
 function grantCrystals() {
   localStorage.lastTweet = Date.now()
   $crystalText.style.display = 'none'
-  crystals += 2
+  $crystalText2.style.display = 'none'
+  crystals += 3
   localStorage.crystals = crystals
   $tweetBubble.style.display = 'block'
   $tweetBubble.offsetTop
@@ -597,10 +593,21 @@ function notTweetedToday(timeStr) {
 
   return false
 }
+var $crystals = document.getElementsByClassName('crystal')
+var i = $crystals.length
+while (i--) {
+  $crystals[i].style.width = window.innerWidth / 30
+  $crystals[i].style.height = window.innerWidth / 30
+}
+
 var $crystalText = document.getElementsByClassName('crystal-text')[0]
+var $crystalText2 = document.getElementsByClassName('crystal-text2')[0]
 if (!isFirstTime && notTweetedToday(lastTweet)) {
   $crystalText.style.display = 'inline-block'
+  $crystalText2.style.display = 'inline-block'
 }
+
+$crystalText2.style.fontSize = $crystalText.style.fontSize = window.innerWidth / 30
 
 var $bird = document.getElementsByClassName('bird')
 var i = $bird.length
@@ -613,6 +620,11 @@ setTimeout(function () {
 })
 
 var $tweetBubble = document.getElementsByClassName('tweet-bubble')[0]
+$tweetBubble.style.width = window.innerWidth / 1.5
+$tweetBubble.style.marginLeft = -window.innerWidth / 3 - window.innerWidth / 25
+$tweetBubble.style.marginTop = window.innerHeight / 40
+$tweetBubble.style.fontSize = window.innerWidth / 25
+$tweetBubble.style.padding = window.innerWidth / 25
 
 var $tweetButton = document.getElementsByClassName('tweet-button')[0]
 $tweetButton.style.marginTop = window.innerHeight / 30
@@ -667,8 +679,8 @@ while(i--) {
 
 
 //DEBUG
-start()
-hideHome()
+// start()
+// hideHome()
 // showEnd(10)
 
 function hideHome() {
