url escape spaces

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         PLAY
       </button>
       <br>
-      <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Ffuco.zolmeister.com&amp;text=Play FUCO online, free, on any device!&amp;hashtags=fuco"
+      <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Ffuco.zolmeister.com&amp;text=Play%20FUCO%20online,%20free,%20on%20any%20device!&amp;hashtags=fuco"
        target="_blank"
        class="tweet-button">
       <svg
@@ -120,7 +120,7 @@
         PLAY AGAIN
       </button>
       <br>
-      <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Ffuco.zolmeister.com&amp;text=Play FUCO online, free, on any device!&amp;hashtags=fuco"
+      <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Ffuco.zolmeister.com&amp;text=Play%20FUCO%20online,%20free,%20on%20any%20device!&amp;hashtags=fuco"
        target="_blank"
        class="tweet-score">
       <svg
